k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 4173
    protocol: TCP
    name: http
  type: LoadBalancer
